# CTCoral_CoDA

./: .gitattributes  .gitignore  LICENSE  README.md  inter_colony.py  pyproject.toml  requirements.txt  run.py  run_C1W.sh
coda/: __main__.py  application.py  utils.py
coda/data_provider/: __init__.py  amira.py  base.py  filesystem.py  random.py
coda/tools/: ancestor_tool.ts  graph_tools.py
coda/view/: base.py  flower.py  graph.py  histogram.py  legend.py  map.py  pca.py  scatter.py  splom.py  statistics.py  table.py  umap.py
cora/: __main__.py  app.py  application.py  cluster.py  data_provider.py  features.py  flower.py  graph.py  histogram.py  sandbox.py  sandbox_glyphmap.py  splom.py  utils.py
cora/data_provider/: __init__.py  amira.py  base.py  filesystem.py  random.py
cora/tools/: ancestor_tool.py  ancestor_tool.ts  graph_tools.py
cora/view/: __init__.py  base.py  cluster.py  embedding.py  flower.py  graph.py  histogram.py  index.py  legend.py  map.py  pca.py  scatter.py  splom.py  statistics.py  table.py  umap.py
data/A2W/: edge_framework.am.csv  vertex_calices.Label-Analysis.csv  vertex_corallites.Label-Analysis.csv  vertex_framework.am.csv
data/C1W/: edge_mintree.csv  edge_points.csv  vertex_geo_location.csv  vertex_label_analysis.csv  vertex_mintree.csv
data/inter_colony/: vertex_calices.csv  vertex_corallites.csv  vertex_info.csv
