[project]
name = "cora"
version = "0.0.0"
description = "An interactive exploration tool for cold-water coral colonies."
readme = "README.md"
requires-python = ">= 3.9"
classifiers = [
    "Programming Language :: Python :: 3"
]
dependencies = [
    "agraph",
    "blinker",
    "bokeh",
    "matplotlib",
    "natsort",
    "networkx",
    "numpy",
    "pandas",
    "pydot",
    "scipy",
    "scikit-image",
    "scikit-learn",
    "umap-learn",
    "xyzservices",
    "watchdog"
]

[project.urls]
"Homepage" = "https://git.zib.de/bschmitt/py_cora.git"

[tool.setuptools]
packages = [
    "cora",
    "cora.data_provider",
    "cora.view"
]

