[project]
name = "coda"
version = "0.0.0"
description = "An interactive exploration tool for cold-water coral colonies and other dendroid structures."
readme = "README.md"
requires-python = ">= 3.9"
classifiers = [
    "Programming Language :: Python :: 3"
]
dependencies = [
    "agraph",
    "blinker",
    "bokeh",
    "matplotlib",
    "natsort",
    "networkx",
    "numpy",
    "pandas",
    "pydot",
    "scipy",
    "scikit-image",
    "scikit-learn",
    "umap-learn",
    "xyzservices",
    "watchdog"
]

[project.urls]
"Homepage" = "https://github.com/AdorablePotato/coda"

[build-system]
requires = [
    "setuptools>=60",
    "setuptools-scm>=8.0"
]

[tool.setuptools]
packages = [
    "coda",
    "coda.data_provider",
    "coda.view",
    "coda.tools"
]

[tool.setuptools.package-data]
tools = [
    "*.ts", 
    "*.png"
]